# cove

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
clients/web/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
clients/web/scripts/: bump-sw-cache.js
clients/web/src/: app.d.ts  app.html
clients/web/src-tauri/: Cargo.toml  cove.entitlements  tauri.conf.json
clients/web/src-tauri/capabilities/: default.json
clients/web/src-tauri/icons/: icon.icns
clients/web/src-tauri/src/: commands.rs  keys.rs  main.rs  subscription.rs
clients/web/src/lib/cove/: Attachment.svelte  DeliveryIndicator.svelte  EntryCard.svelte  ExpandableBody.svelte  ReplyPreview.svelte  Seal.svelte  VerificationChain.svelte  chat.test.ts  chat.ts  client.test.ts  client.ts  crypto.ts  errors.ts  fixtures.json  hub.svelte.ts  hub.test.ts  hubs.test.ts  hubs.ts  identity.test.ts  identity.ts  pairing.test.ts  pairing.ts  passkey.test.ts  passkey.ts  root-vault.test.ts  root-vault.ts  state.svelte.ts  state.test.ts  tauri.ts  threadname.test.ts  threadname.ts  types.ts  vault-blob.test.ts  vault-blob.ts  vault.test.ts  vault.ts  verify.test.ts  verify.ts
clients/web/src/routes/: +layout.svelte  +page.svelte  AddHubPanel.svelte  AdminPanel.svelte  AuthPanel.svelte  BallotCard.svelte  ChatMessage.svelte  ComposeBox.svelte  FilesView.svelte  HubSwitcher.svelte  InboxPanel.svelte  OnboardingPanel.svelte  ReplyPanel.svelte  ThreadList.svelte  ThreadView.svelte  UpdateBar.svelte
clients/web/src/routes/demo/: +page.svelte
clients/web/static/: _headers  manifest.json  sw.js
deploy/: README.md  cloudflared-config.yml.example  cove-hub.service
docker/: README.md
docs/: MILESTONES.md  client-spec.md  dependency-risks.md  identity-vault-spec.md  root-custody-threat-model.md  server-hub-spec.md  translog-notes.md
landing/: README.md  index.html
landing/join/: index.html
landing/rules/: index.html
landing/specs/: client.html  client.md  hub.html  index.html  root-custody.html  spec.css  spec.js  vault.html
landing/start/: index.html
scripts/: attest_member.py  bootstrap_pilot.py  dump_test_vectors.py  gen_keys.py  genesis.sh  mint_invite.py  rerole_member.py  roster.example.csv  run_hub.py  sync_landing_specs.sh  tunnel_add.sh  wipe_brooks_hub.sh  wipe_hub.sh  wipe_lwccoa_hub.sh
src/cove/: __init__.py  api.py  audience.py  auth.py  blobs.py  config.py  crypto.py  entry.py  identity.py  index.py  invites.py  pending.py  pipeline.py  store.py  throttle.py  translog.py  translog_ephemeral.py  vaults.py
src/cove/client/: __init__.py  client.py
tests/: conftest.py  test_api.py  test_attest_member.py  test_auth.py  test_blobs.py  test_client.py  test_crypto_entry.py  test_e2e_broadcast.py  test_gen_keys.py  test_identity.py  test_index.py  test_invites.py  test_pending.py  test_pending_api.py  test_pipeline.py  test_pipeline_atomicity.py  test_store.py  test_throttle.py  test_translog.py  test_translog_ephemeral.py  test_vaults.py
