[project]
name = "cove"
version = "0.1.0"
description = "Cove — accountable group messaging over VNTP (LWCCOA pilot)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",   # includes websockets
    "pynacl>=1.5",               # Ed25519
    "rfc8785>=0.1.2",            # JSON Canonicalization Scheme (RFC 8785)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",               # async test client for FastAPI
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
