[package]
name = "cove-web"
version = "0.1.0"
description = "Cove — Tauri desktop/mobile shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Key custody: OS keychain access via the `keyring` crate.
#   macOS:   Keychain Services
#   Windows: Credential Manager (Win32 wincred)
#   Linux:   Secret Service (requires libsecret-1-dev at build time;
#            see clients/web/README.md slice 3 notes)
keyring = "3"

# Ed25519 signing — performed Rust-side so the private key never crosses
# the JS↔Rust boundary after import. ed25519-dalek is the same algorithm
# the hub uses (Python PyNaCl); signatures interoperate.
ed25519-dalek = { version = "2", features = ["std"] }

# Hex encode/decode for the wire (priv/pub keys are 64-char hex strings
# matching scripts/gen_keys.py output).
hex = "0.4"

# Native notifications. JS counterpart: @tauri-apps/plugin-notification.
tauri-plugin-notification = "2"

# Background WebSocket subscription — held by the Rust process so push
# messages arrive even when the webview window is closed. We pin to a
# tokio-tungstenite version that connects to ws:// and wss:// without
# requiring a TLS feature for dev (rustls becomes a follow-up for
# distribution where wss:// is non-optional).
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
