[package]
name = "cove-web"
version = "0.1.9"
description = "Cove — Tauri desktop/mobile shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# The `tray-icon` feature is what unlocks tauri::tray::* used in main.rs
# for the system tray (Open / Quit) — slice 4. Without it the build
# fails with `could not find tray in tauri`.
#
# `devtools` exposes right-click → Inspect in the webview AT RELEASE time
# (without it, devtools only ship in `tauri dev` builds). On for the
# pilot so we can diagnose the JS↔Rust boundary directly; can be removed
# from release builds later if a "no devtools in shipped binaries" posture
# is wanted.
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Used by keys.rs for the KeyError enum (#[derive(thiserror::Error)]).
# Slice 3 introduced this without adding the dep — caught in the first
# cross-platform CI build of slice 4b.
thiserror = "1"

# Key custody: OS keychain access via the `keyring` crate.
#   macOS:   Keychain Services
#   Windows: Credential Manager (Win32 wincred)
#   Linux:   Secret Service (requires libsecret-1-dev at build time;
#            see clients/web/README.md slice 3 notes)
keyring = "3"

# Ed25519 signing — performed Rust-side so the private key never crosses
# the JS↔Rust boundary after import. ed25519-dalek is the same algorithm
# the hub uses (Python PyNaCl); signatures interoperate.
ed25519-dalek = { version = "2", features = ["std"] }

# Hex encode/decode for the wire (priv/pub keys are 64-char hex strings
# matching scripts/gen_keys.py output).
hex = "0.4"

# Native notifications. JS counterpart: @tauri-apps/plugin-notification.
tauri-plugin-notification = "2"

# Auto-update. JS counterpart: @tauri-apps/plugin-updater. The bundle is
# verified against a Tauri-signer public key (separate from OS code-
# signing) before it's allowed to install — so even unsigned macOS/
# Windows builds get a cryptographically authenticated update channel.
# The private key is held by CI as a secret; the public key is baked
# into tauri.conf.json (see `plugins.updater.pubkey`).
tauri-plugin-updater = "2"

# Lets the webview JS side restart the app after applying an update.
# JS counterpart: @tauri-apps/plugin-process. Only the `restart`
# permission is exposed via capabilities/default.json.
tauri-plugin-process = "2"

# Background WebSocket subscription — held by the Rust process so push
# messages arrive even when the webview window is closed.
#
# TLS via rustls + webpki-roots: enables wss:// for production hubs
# served behind TLS (Cloudflare Tunnel / Caddy / any reverse-proxy).
# Without this, the subscriber fails on first connect with
# "TLS support not compiled in" and posted entries never round-trip
# back to the UI. rustls + webpki-roots avoids depending on the host
# OS's root cert store, which is the cleanest cross-platform shape.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
url = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
